Main page with API key. Also brand new repo - hopefully this push isn't rejected!

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,6 +19,8 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+
+    This is my personal comment/
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC_51qWBizuEqRGN7xC5Nm5BwK19JBJNrg</string>
 </resources>
