All updates as of 11/14/18 - implemented menu, FAB, autocomplete

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -21,5 +21,6 @@
 
     This is my personal comment/
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC_51qWBizuEqRGN7xC5Nm5BwK19JBJNrg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAQwpN5ifKpBnKlOH3RjAjvtUVLU_X3QXo
+</string>
 </resources>
