Implemented polyline for directions, as well as getting distance and duration. Also we made a to-do list! :^)

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -21,6 +21,5 @@
 
     This is my personal comment/
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAQwpN5ifKpBnKlOH3RjAjvtUVLU_X3QXo
-</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBeGdrSYOmHKIdmg2UKJMnXrGe_8qrSw9c</string>
 </resources>
