Changed the colors/layout, added snackbar/menu item to display route info, added alert dialog for phone call, changed icon for route builder and app icon, updated app name and display name. We probably did other stuff that I'm forgetting! But it was still valuable :)

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/route_info"
+        android:icon="@drawable/ic_route"
+        android:title="@string/route_info_string"
+        app:showAsAction="always"
+        />
+    <item
         android:id="@+id/call_SW"
         android:icon="@drawable/ic_main_phone"
         android:title="@string/call_SW"
@@ -18,4 +24,5 @@
         android:icon="@drawable/ic_main_group"
         android:title="@string/Plan_Trip"
         app:showAsAction="always" />
+
 </menu>
