--- a/app/src/main/res/drawable/ic_route.xml
+++ b/app/src/main/res/drawable/ic_route.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- drawable/routes.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#FFF" android:pathData="M20,2H4A2,2 0 0,0 2,4V22L6,18H20A2,2 0 0,0 22,16V4A2,2 0 0,0 20,2M6,9H18V11H6M14,14H6V12H14M18,8H6V6H18" />
+    <path android:fillColor="#FFF" android:pathData="M11,10H5L3,8L5,6H11V3L12,2L13,3V4H19L21,6L19,8H13V10H19L21,12L19,14H13V20A2,2 0 0,1 15,22H9A2,2 0 0,1 11,20V10Z" />
 </vector>
