--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#80c683</color>
+    <color name="colorPrimaryDark">#509556</color>
+    <color name="colorAccent">#ffb74d</color>
+    <color name="colorPrimaryLight">b1f9b3</color>
+    <color name="colorAccentLight">#ffe97d</color>
+    <color name="colorAccentDark">#c88719</color>
 </resources>
