Ok, so I had forgotten to create and show the builder for the second alert dialog! Good news is, Daniel emulated this and the first alertDialog worked- the second one is basically a copy of that code, so I feel pretty confident. I also added an 'else' statement, buaft that shouldn't affect much.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#80c683</color>
     <color name="colorPrimaryDark">#509556</color>
     <color name="colorAccent">#ffb74d</color>
-    <color name="colorPrimaryLight">b1f9b3</color>
+    <color name="colorPrimaryLight">#b1f9b3</color>
     <color name="colorAccentLight">#ffe97d</color>
     <color name="colorAccentDark">#c88719</color>
 </resources>
